--- a/documentation/written summary/sample.bib
+++ b/documentation/written summary/sample.bib
@@ -34,3 +34,12 @@
   year={2013},
   organization={ACM}
 }
+
+@inproceedings{kassner2014pupil,
+  title={Pupil: an open source platform for pervasive eye tracking and mobile gaze-based interaction},
+  author={Kassner, Moritz and Patera, William and Bulling, Andreas},
+  booktitle={Proceedings of the 2014 ACM international joint conference on pervasive and ubiquitous computing: Adjunct publication},
+  pages={1151--1160},
+  year={2014},
+  organization={ACM}
+}
